apps/annotation/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: labelstudio-backend-route
spec:
  parentRefs:
    - name: louis-gateway
      namespace: louis
      sectionName: https-labelstudio
  hostnames:
    - labelstudio.inspection.alpha.canada.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: labelstudio-svc
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: fiftyone-route
spec:
  parentRefs:
    - name: louis-gateway
      namespace: louis
      sectionName: https-fiftyone
  hostnames:
    - fiftyone.inspection.alpha.canada.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: fiftyone
          port: 5151
